<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/printer_on"
        android:id="@+id/prnOnIcon"
        android:icon="@drawable/ic_baseline_print_24"
        android:visible="false"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"
        android:onClick="iconOn"/>
    <item
        android:title="@string/printer_off"
        android:id="@+id/prnOffIcon"
        android:icon="@drawable/ic_baseline_print_disabled_24"
        app:showAsAction="always"
        android:onClick="iconOff"/>
    <!--options_menu_icon_hack-->
    <item
        android:id="@+id/action_notification1"
        android:icon="@android:drawable/ic_menu_more"
        android:title="action_option_menu"
        app:showAsAction="always">
        <menu>
            <item
                android:title="@string/delete_all_threads"
                android:icon="@android:drawable/ic_menu_delete"
                android:id="@+id/delete" />
            <item
                android:title="@string/license_status"
                android:icon="@drawable/ic_baseline_verified_24"
                android:id="@+id/licence"
                android:onClick="licenceCheck"
                app:showAsAction="never"/>
            <item
                android:title="Refresh Inbox"
                android:icon="@drawable/ic_baseline_refresh_24"
                android:id="@+id/refreshInbox"
                android:onClick="refreshInbox"
                app:showAsAction="never"/>
            <item
                android:title="Activate Printer"
                android:icon="@drawable/ic_baseline_local_printshop_24"
                android:onClick="prnAct"
                android:id="@+id/printerOn"
                app:showAsAction="never"/>
            <item
                android:title="Deactivate Printer"
                android:icon="@drawable/ic_baseline_print_disabled_24_hidden_menu"
                android:onClick="prnDeAct"
                android:visible="false"
                android:id="@+id/printerOff"
                app:showAsAction="never" />
            <item
                android:title="Default Activity"
                android:icon="@drawable/ic_baseline_stars_24"
                android:onClick="mkDefault"
                app:showAsAction="never"/>
            <item
                android:title="Receipt Style"
                android:icon="@drawable/ic_baseline_format_shapes_24"
                android:id="@+id/recStyle"
                android:onClick="onStyle"
                android:visible="true"
                app:showAsAction="never"/>
            <item
                android:icon="@android:drawable/ic_menu_gallery"
                android:onClick="onClickBmp"
                android:title="Print Logo"
                app:showAsAction="never" />
            <item
                android:title="About"
                android:icon="@drawable/ic_baseline_read_more_24"
                android:onClick="onAbout"
                app:showAsAction="never"
                android:visible="false"/>
            <item
                android:title="@string/exit"
                android:icon="@drawable/ic_lock_power_off"
                android:id="@+id/exit"
                app:showAsAction="never"/>
        </menu>
    </item>
</menu>